2012-04-08         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am (EXTRA_DIST): Add missing files fork.ok, fork2.ok
	and ordchr2.ok.

2012-04-08         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am (AWK, PGAWK): Include new $(VALGRIND) variable in
	command line (now passed in by top-level Makefile).

2012-04-07         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am (ordchr2, readfile): Fix so "make diffout" will work
	properly.
	* orchr2.ok: New file.

2012-04-07         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am (check): Add new shlib-tests target.
	(SHLIB_TESTS): Add tests ordchr, ordchr2, fork, fork2, readfile and
	filefuncs.
	* ordchr.awk, ordchr.ok, fork.awk, fork.ok, fork2.awk, fork2.ok,
	filefuncs.awk, filefuncs.ok: New files.

2012-04-01         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am (valgrind-scan): Update to match modern valgrind output.

2011-12-26         John Haque      <j.eh@mchsi.com>

	* badargs.ok: Adjust for new and changed command line options.

2011-12-26         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (rri1): New test.
	* rri1.awk, rri1.in, rri1.ok: New files.

2011-12-06         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am: Rationalize the $(CMP) lines wherever possible.

2011-10-24         Arnold D. Robbins     <arnold@skeeve.com>

	* beginfile2.sh: Use `...` instead of $(...) for broken systems
	where /bin/sh doesn't support $(...).  Thanks to Nelson Beebe for
	the report.

2011-10-21         John Haque      <j.eh@mchsi.com>

	* beginfile2.in, beginfile2.sh, beginfile2.ok: Adjust input file names.

2011-10-21         Corinna Vinschen      <vinschen@redhat.com>

	* Makefile.am (beginfile2): Adjust for running out of srcdir.
	* beginfile2.sh: Same.

2011-10-02         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (rtlen, rtlen01, rtlenmb): New tests.