@@ -1,5 +1,10 @@
 2012-04-08         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
+	* Makefile.am (VALGRIND): Set to empty to protect against random
+	values in the environment.
+
+2012-04-08         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
 	* Makefile.am (EXTRA_DIST): Add missing files fork.ok, fork2.ok
 	and ordchr2.ok.
 
